--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ langcodes==3.3.0
 langdetect==1.0.9
 MarkupSafe==2.1.5
 murmurhash==1.0.10
+gunicorn==21.2.0
 numpy==1.26.4
 packaging==23.2
 preshed==3.0.9
